# Astrud-core

./: .gitignore  app.py  config.example.json  pyproject.toml  requirements.txt
