[tool.poetry]
name = "astrud-core"
version = "0.2.1"
description = "Astrud API server."
authors = ["takatoh <takatoh.m@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
bottle = "^0.12.20"
Pillow = "^9.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
