[tool.poetry]
name = "astrud-core"
version = "0.3.2"
description = "Astrud API server."
authors = ["takatoh <takatoh.m@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
bottle = "^0.13.0"
Pillow = "^11.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
